k8s/minio-nodeport.yaml
apiVersion: v1
kind: Service
metadata:
  name: minio-nodeport
  namespace: ml-deployment
spec:
  selector:
    app: minio
  ports:
  - name: api
    port: 9000
    targetPort: 9000
    nodePort: 30900
    protocol: TCP
  - name: console
    port: 9001
    targetPort: 9001
    nodePort: 30901
    protocol: TCP
  type: NodePort
