k8s/postgres-loadbalancer.yaml
apiVersion: v1
kind: Service
metadata:
  name: postgres-loadbalancer
  namespace: ml-deployment
  annotations:
    service.beta.kubernetes.io/aws-load-balancer-type: "nlb"
    service.beta.kubernetes.io/aws-load-balancer-scheme: "internet-facing"
spec:
  selector:
    app: postgres
  ports:
  - port: 5432
    targetPort: 5432
    protocol: TCP
  type: LoadBalancer
