k8s/ingress-domain.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ml-ingress-domain
  namespace: ml-deployment
  annotations:
    traefik.ingress.kubernetes.io/router.entrypoints: web
    traefik.ingress.kubernetes.io/router.tls: "false"
    # Cloudflare annotations
    external-dns.alpha.kubernetes.io/hostname: api.adityawidiyanto.my.id, mlflow.adityawidiyanto.my.id, prometheus.adityawidiyanto.my.id, grafana.adityawidiyanto.my.id, minio.adityawidiyanto.my.id
spec:
  ingressClassName: traefik
  rules:
  - host: api.adityawidiyanto.my.id
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: fastapi-service
            port:
              number: 8000
  - host: mlflow.adityawidiyanto.my.id
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: mlflow-service
            port:
              number: 5000
  - host: minio.adityawidiyanto.my.id
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: minio-service
            port:
              number: 9001
  - host: grafana.adityawidiyanto.my.id
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: grafana-service
            port:
              number: 3000
  - host: prometheus.adityawidiyanto.my.id
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: prometheus-service
            port:
              number: 9090
